--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.1.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "google-auth-library": "^8.8.0",
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
