--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.0",
     "express": "^4.18.2",
+    "express-http-proxy": "^1.6.3",
     "express-session": "^1.17.3",
     "google-auth-library": "^8.8.0",
     "joi": "^17.7.0",
