--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^7.2.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
